# openlawsvpn

./: .gitignore  .gitmodules  CONTRIBUTORS.md  LICENSE_USAGE_EXCEPTION  Makefile  PLAN.md  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yml  release.yml  website.yml
android/poc/: settings.gradle.kts
android/poc/app/: build.gradle.kts
android/poc/app/src/main/: AndroidManifest.xml
android/poc/app/src/main/java/com/openlawsvpn/poc/: MainActivity.kt  SamlCallbackServer.kt
android/poc/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/poc/app/src/main/res/layout/: activity_main.xml
android/poc/app/src/main/res/values/: colors.xml  strings.xml
docs/: flutter.spec  openvpn3.spec  play-store-data-safety.md
gui/: README.md  pubspec.yaml
gui-gtk/: Cargo.toml  build.rs  ffi_wrapper.h
gui-gtk/src/: about_view.rs  log_view.rs  main.rs  profile_store.rs  saml_server.rs  tray.rs  vpn_service.rs
gui-gtk/src/connection/: mod.rs  profile.rs  state.rs
gui/lib/: main.dart
gui/lib/bindings/: libopenlawsvpn.dart
gui/lib/services/: saml_capture_service.dart  vpn_service.dart
gui/linux/: CMakeLists.txt
gui/linux/runner/: CMakeLists.txt  my_application.cc
linux/: CMakeLists.txt  Containerfile.static  README.md  openlawsvpn.spec
linux/include/: dbus_client.h  libopenlawsvpn.h  saml_capture.h
linux/src/: dbus_client.cpp  libopenlawsvpn.cpp  libopenlawsvpn_ffi.cpp  main.cpp  saml_capture.cpp
patches/: README.md  cryptoalgs.hpp.patch  ovpncli.cpp.patch
provision/spec/openvpn3/: gcc-16-array-bounds.patch  openvpn3.orig.spec  openvpn3.spec
scripts/: resolve-openvpn3-core.sh
tools/: ov3_clean.sh
website/: index.html  privacy.html
