[package]
name = "openlawsvpn-gui"
version = "0.1.0"
edition = "2021"
description = "GTK4 + libadwaita GUI for openlawsvpn"
license = "LGPL-2.1-or-later"

[[bin]]
name = "openlawsvpn-gui"
path = "src/main.rs"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
once_cell = "1"

[build-dependencies]
bindgen = "0.71"
